--- a/12/index.html
+++ b/12/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
-    <style src="css/style.css"></style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
     <div class="header">
 
         <div class="logo">
-            <a href="#">Your Logo</a>
+            <a href="#"><span>&#9679</span><span>&#9632</span>Your Logo</a>
         </div>
         <div class="link">
             <a href="#">Home</a>
@@ -34,26 +34,26 @@
 
     <main>
         
-        <div class="mainpage">Responsive Web Design</div>
+        <div class="mainpage"><div class="title">Responsive Web Design</div></div>
 
-        <div>
+        <div id="column">
 
             <div class="news">
-                <img src="" alt="pic">
+                <img src="pics/R.jfif" alt="pic">
                 <div id="text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis deserunt incidunt iusto ipsa eaque, quasi beatae, tenetur dignissimos illo ut ratione, ducimus nostrum minus architecto dolore tempore ipsam assumenda dicta!
                 </div>
             </div>
 
             <div class="news">
-                <img src="" alt="pic1">
+                <img src="pics/R.jfif" alt="pic1">
                 <div id="text">
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel, praesentium? Beatae, ducimus cupiditate quam corrupti voluptatem similique, amet inventore, deleniti quasi fuga nam! Sit, sunt. Facilis velit veritatis provident atque.
                 </div>
             </div>
 
             <div class="news">
-                <img src="" alt="pic2">
+                <img src="pics/R.jfif" alt="pic2">
                 <div id="text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore reprehenderit temporibus delectus, quasi adipisci qui recusandae distinctio odit ratione aspernatur consequuntur saepe, tempora, maxime optio sint rem? Officia, laborum architecto?
                 </div>
