--- a/12/index.html
+++ b/12/index.html
@@ -34,7 +34,13 @@
 
     <main>
         
-        <div class="mainpage"><div class="title">Responsive Web Design</div></div>
+        <div class="mainpage">
+            <div class="title">
+            <div>Responsive</div> 
+            <div>Web Design</div>
+            </div>
+
+        </div>
 
         <div id="column">
 
@@ -46,14 +52,14 @@
             </div>
 
             <div class="news">
-                <img src="pics/R.jfif" alt="pic1">
+                <img src="pics/OIP.jfif" alt="pic1">
                 <div id="text">
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel, praesentium? Beatae, ducimus cupiditate quam corrupti voluptatem similique, amet inventore, deleniti quasi fuga nam! Sit, sunt. Facilis velit veritatis provident atque.
                 </div>
             </div>
 
             <div class="news">
-                <img src="pics/R.jfif" alt="pic2">
+                <img src="pics/gradient.1024x600.jpg" alt="pic2">
                 <div id="text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore reprehenderit temporibus delectus, quasi adipisci qui recusandae distinctio odit ratione aspernatur consequuntur saepe, tempora, maxime optio sint rem? Officia, laborum architecto?
                 </div>
