--- a/16/index.html
+++ b/16/index.html
@@ -92,14 +92,26 @@
         <div class="dot"><div class="warrior white"></div></div>
       </div>
       <div class="row">
+        <div class="dot">
+            <div class="rook white"></div>
+            <div class="rook_top1 white"></div>
+            <div class="rook_top2 white"></div>
+            <div class="rook_bottom1 white"></div>
+            <div class="rook_bottom2 white"></div>
+        </div>
         <div class="dot"></div>
         <div class="dot"></div>
         <div class="dot"></div>
         <div class="dot"></div>
         <div class="dot"></div>
         <div class="dot"></div>
-        <div class="dot"></div>
-        <div class="dot"></div>
+        <div class="dot">
+            <div class="rook white"></div>
+            <div class="rook_top1 white"></div>
+            <div class="rook_top2 white"></div>
+            <div class="rook_bottom1 white"></div>
+            <div class="rook_bottom2 white"></div>
+        </div>
       </div>
     </div>
   </body>
